--- a/Workflow/package.json
+++ b/Workflow/package.json
@@ -11,11 +11,11 @@
     "url": "http://www.nathanw.com.au"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.4.3",
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babelify": "10.0.0",
-    "grunt": "1.0.3",
+    "grunt": "^1.0.4",
     "grunt-banner": "0.6.0",
     "grunt-browserify": "^5.3.0",
     "grunt-contrib-clean": "2.0.0",
